[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/TankBoss.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TankBossGun.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TrailTank.gd" type="Script" id=3]
[ext_resource path="res://Sprites/trail.png" type="Texture" id=4]
[ext_resource path="res://Scenes/TankBoss.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainGunEnemy.gd" type="Script" id=6]
[ext_resource path="res://Scenes/EnemyDeathDissolve.tres" type="Material" id=7]
[ext_resource path="res://Scenes/Placeable.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/BulletTank.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Gun0Base.png" type="Texture" id=10]
[ext_resource path="res://Scenes/MuzzleFlash.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.5, 38 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 78.5, 57 )

[sub_resource type="CircleShape2D" id=4]
radius = 123.016

[node name="Tank" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 5 )
bulletTank = ExtResource( 9 )
bulletPlasma = ExtResource( 12 )
enemyBomb = ExtResource( 8 )
muzzleflash = ExtResource( 11 )

[node name="TankColl" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2( 3.5, 1.66893e-06 )
shape = SubResource( 2 )

[node name="MegaTankColl" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2( -3.5, 0 )
shape = SubResource( 5 )
disabled = true

[node name="Nearby" type="Area2D" parent="." groups=["NearbyEnemies"]]

[node name="NearbyEnemies" type="CollisionShape2D" parent="Nearby"]
shape = SubResource( 4 )

[node name="Trail" type="Line2D" parent="."]
width = 110.0
default_color = Color( 0, 0, 0, 0.0705882 )
texture = ExtResource( 4 )
texture_mode = 2
script = ExtResource( 3 )
trailLength = 100
targetPath = NodePath("..")

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 7 )
position = Vector2( -9.53674e-07, 0 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
offset = Vector2( 15, 0 )

[node name="MainGun" type="Sprite" parent="."]
material = ExtResource( 7 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
offset = Vector2( 14, 0 )
script = ExtResource( 6 )
tank = true

[node name="SecondaryGun" type="Sprite" parent="."]
position = Vector2( 41, 28 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
offset = Vector2( 5, 0 )
script = ExtResource( 6 )
tank = true

[node name="SecondaryGun2" type="Sprite" parent="."]
visible = false
position = Vector2( -34, -28 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
offset = Vector2( 5, 0 )
script = ExtResource( 6 )
tank = true

[connection signal="tree_exiting" from="." to="." method="_on_Tank_tree_exiting"]
[connection signal="body_entered" from="Nearby" to="." method="_on_Nearby_body_entered"]
[connection signal="body_exited" from="Nearby" to="." method="_on_Nearby_body_exited"]
